idf_component_register(SRCS
                       main.cpp
                       buzzer.cpp
                       console.cpp
                       display.cpp
                       hw.cpp
                       nvs.cpp
                       util.cpp
                       INCLUDE_DIRS ".")

#add_definitions(-DSIMULATE)
